# learning-ai

./: .gitignore  README.md  pyproject.toml
.windsurf/rules/: code-style-guide.md
projects/agent-abstractions/: README.md  compare.py  level1_raw_sdk.py  level2_agent_class.py  level3_langgraph.py  tools.py
projects/basic-agent-with-atlas/: README.md  ai.py  app.py  dinner_party.py  dinner_party_db.py
projects/basic-agent-with-atlas/first-pass/: guests.txt  haikus.txt
projects/fast-research-lab/: README.md  main.py
projects/foundational-designs/: CLAUDE.md  PROCESS.md  README.md
projects/foundational-designs/01-mcp-server/: Dockerfile  README.md  mock_openapi_spec.json  pyproject.toml  server_curated.py  server_from_spec.py
projects/foundational-designs/01-mcp-server/ide_configs/: claude_desktop.json  cursor.json  (+1 more)
projects/foundational-designs/02-skills/: README.md
projects/foundational-designs/03-intelligence-service/: README.md  pyproject.toml
projects/foundational-designs/03-intelligence-service/app/: config.py  main.py  models.py
projects/foundational-designs/03-intelligence-service/app/routers/: chat.py  extract.py  search.py
projects/foundational-designs/03-intelligence-service/app/services/: extraction_service.py  llm_factory.py  search_service.py
projects/foundational-designs/03-intelligence-service/sample_data/: docs.json
projects/foundational-designs/assets/: architecture.md
projects/gpu-play/: README.md  demo.py
projects/langgraph-demos/: augmented_llm.py
projects/prefab-demo/: README.md  app.py
reflections/: phase-0.md
(+10 files in other folders)
