[project]
name = "learning-ai"
version = "0.1.0"
description = "Monorepo for AI learning journey"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beanie[ocsp]>=2.0.0",
    "fastapi[standard]>=0.116.1",
    "langchain[anthropic,community,openai]>=0.3.26",
    "langgraph>=0.5.4",
]
