[project]
name = "acme-intelligence-service"
version = "0.1.0"
description = "Demo AI microservice for Rails integration"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-openai>=0.3",
    "langchain-google-genai>=2.0",
    "pydantic>=2.9",
    "sse-starlette>=2.0",
    "httpx>=0.27",
]
